--- a/text/ratings.tex
+++ b/text/ratings.tex
@@ -32,11 +32,11 @@ The six statistics we track are:
 
 The objective statistics are updated in line with their description, formally:
 \begin{align}
-    \using m =\; &\tau \bmod \mathsf{E} \ ,\quad m' = \tau' \bmod \mathsf{E}\\
+    \using m =\; &\ffrac{\tau}{\mathsf{E}} \ ,\quad m' = \ffrac{\tau'}{\mathsf{E}}\\
     (\mathbf{a}, \pi'_1) \equiv\;&\begin{cases}
         (\pi_0, \pi_1) &\when m' = m \\
-        (\sq{\tuple{0, \dots, [0, \dots]}, \dots}, A(\pi_0))\!\!\!\! &\otherwise
-    \end{cases}\!\!\!\!\\
+        (\sq{\tuple{0, \dots, [0, \dots]}, \dots}, \pi_0) &\otherwise
+    \end{cases}\\
     \forall v \in \N_\mathsf{V} :&\; \left\{\begin{aligned}
         \pi'_0[v]_b &\equiv \mathbf{a}[v]_b + (v = \mathbf{H}_a)\\
         \pi'_0[v]_t &\equiv \mathbf{a}[v]_t + \begin{cases}
