--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -13,7 +13,7 @@ The service account is defined as the tuple of storage dictionary $\mathbf{s}$, 
   \mathbb{A} \equiv \ltuple\ \begin{aligned}
   \mathbf{s} &\in \dict{\H}{\Y}\ ,\qquad \mathbf{p} \in \dict{\H}{\Y}\ ,\\
   \mathbf{l} &\in \dict{\ltuple\H\ts\N_L\rtuple}{\seq{\N_T}_{:3}}\ ,\\
-  c &\in \H\ ,\quad b \in \N_B\ ,\quad  g \in \Z_G\ ,\quad m \in \Z_G
+  c &\in \H\ ,\quad b \in \N_B\ ,\quad  g \in \N_G\ ,\quad m \in \N_G
 \end{aligned}\,\rtuple
 \end{align}
 
