--- a/text/header.tex
+++ b/text/header.tex
@@ -46,7 +46,7 @@ All blocks have an associated public key to identify the author of the block. We
 
 \subsection{The Epoch and Winning Tickets Markers}\label{sec:header_epochmarker}
 
-If not $\none$, then the epoch marker specifies key and entropy relevant to the following epoch in case the ticket contest does not complete adequately (a very much unexpected eventuality). Similarly, the winning-tickets marker, if not $\none$, provides the series of 600 slot sealing ``tickets'' for the next epoch (see the next section). Finally, the judgements marker is a sequence of report hashes judged not as confidently valid, to be fully explained in section \ref{sec:judgements}. Formally:
+If not $\none$, then the epoch marker specifies key and entropy relevant to the following epoch in case the ticket contest does not complete adequately (a very much unexpected eventuality). Similarly, the winning-tickets marker, if not $\none$, provides the series of 600 slot sealing ``tickets'' for the next epoch (see the next section). Finally, the judgements marker is a sequence of report hashes judged not as confidently valid, to be fully explained in section \ref{sec:verdicts}. Formally:
 \begin{equation}
   \mathbf{H}_e \in \tuple{\H\ts\lseq\H_B\rseq_{\mathsf{V}}}\bm{?}\ , \quad
   \mathbf{H}_w \in \seq{\mathbb{C}} _{\mathsf{E}}\bm{?}\ , \quad
