--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -127,7 +127,7 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
     \var{\mathbf{E}_A},\ 
     \var{[\tup{c, w, \var{a}} \mid \tup{c, w, a} \orderedin \mathbf{E}_G]}
   \end{aligned}\;\right\rparen \\
-  \nonumber &\quad \where \mathbf{E}_J \equiv (\mathbf{j}, \mathbf{c}, \mathbf{f}) \\
+  \nonumber &\quad \where \mathbf{E}_V \equiv (\mathbf{j}, \mathbf{c}, \mathbf{f}) \\
   \se(\mathbf{H}) &= \se_U(\mathbf{H})\concat\se(\mathbf{H}_s) \\
   \se_U(\mathbf{H}) &= \se(\mathbf{H}_p,\mathbf{H}_r,\mathbf{H}_x)\concat\se_4(\mathbf{H}_t)\concat\se(\maybe{\mathbf{H}_e},\maybe{\mathbf{H}_w},\var{\mathbf{H}_j},\se_2(\mathbf{H}_k),\mathbf{H}_v)\\
   \se(x \in \mathbb{X}) &\equiv \se(x_a, x_s, x_b, x_l)\concat\se_4(x_t)\concat\se(\maybe{x_p})\\
