Various corrections and rename judgement extrinsic -> verdict (#39)
* ...plus changes

* Rework guarantee extrinsic

* Corrections and judgement -> verdict

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -35,7 +35,7 @@ The Is-Authorized invocation is the first and simplest of the four, being totall
 
 \begin{align}
   \Psi_I &\colon \left\{\begin{aligned}
-    (\mathbb{P}, \N_C) &\to \Y \cup \mathbb{J} \\
+    (\mathbb{P}, \N_\mathsf{C}) &\to \Y \cup \mathbb{J} \\
     (\mathbf{p}, c) &\mapsto \begin{cases}
       \mathbf{r} &\otherwhen \mathbf{r} \in \{ \oog, \panic \}  \\
       \mathbf{o} &\otherwhen \mathbf{r} = \tup{g, \mathbf{o}} \\
@@ -114,7 +114,7 @@ We track both regular and exceptional dimensions within our context mutator, but
   \mathbf{X} \equiv \ltuple\begin{array}{lll}
     \isa{\mathbf{s}}{\mathbb{A}\bm{?}}\ts&
     \isa{\mathbf{c}}{\seq{\seq{\H}_\mathsf{Q}}_\mathsf{C}}\ts&
-    \isa{\mathbf{v}}{\mathbb{K}_\mathsf{V}}\ts\quad
+    \isa{\mathbf{v}}{\seq{\mathbb{K}}_\mathsf{V}}\ts\quad
     \isa{i}{\N_S}\ts\\
     \isa{\mathbf{t}}{\seq{\mathbb{T}}}\ts&
     \isa{\mathbf{n}}{\dict{\N_S}{\mathbb{A}}}\ts&
@@ -141,7 +141,7 @@ We define $\Psi_A$, the Accumulation invocation function as:
   I(\mathbf{a} \in \mathbb{A}, s \in \N_S) &\equiv (\mathbf{x}, \mathbf{y}) \text{ where }
   \left\{ \begin{aligned}
     \mathbf{x} &= \mathbf{y} = \tup{\is{\mathbf{s}}{\mathbf{a}}\ts\is{\mathbf{t}}{[]}\ts i\ts\is{p}{\chi}\ts\is{\mathbf{c}}{\varphi}\ts\is{\mathbf{v}}{\iota}\ts\is{\mathbf{n}}{\emptyset}}\ ,\\
-    i &= \text{check}((\de_4(\mathcal{H}(s, \bm{\eta'}_0, \mathbf{H}_t)) \bmod (2^{32}-2^9)) + 2^8)
+    i &= \text{check}((\de_4(\mathcal{H}(s, \eta'_0, \mathbf{H}_t)) \bmod (2^{32}-2^9)) + 2^8)
   \end{aligned} \right. \\
   F(n, \xi, \omega, \mu, (\mathbf{x}, \mathbf{y})) &\equiv \begin{cases}
     G(\Omega_R(\xi, \omega, \mu, \mathbf{x}_\mathbf{s}, s, \delta^\dagger), (\mathbf{x}, \mathbf{y})) &\when n = \mathtt{read} \\
